--- a/spring-ai-alibaba-agent-example/playground-flight-booking/src/main/resources/application.properties
+++ b/spring-ai-alibaba-agent-example/playground-flight-booking/src/main/resources/application.properties
@@ -12,6 +12,12 @@ spring.thymeleaf.cache=false
 # spring.ai.openai.chat.options.model=llama3-70b-8192
 # spring.ai.anthropic.chat.options.model=claude-3-5-sonnet-20240620
 
+###################
+# ollama
+###################
+
+#spring.ai.ollama.base-url=http://10.166.30.156:11434
+#spring.ai.ollama.chat.options.model=qwen2.5:14b
 
 ###################
 # Groq
@@ -24,8 +30,11 @@ spring.thymeleaf.cache=false
 ###################
 # dashscope
 ###################
-spring.ai.dashscope.api-key=${AI_DASHSCOPE_API_KEY}
-spring.ai.dashscope.chat.options.model=qwen-max
+spring.ai.dashscope.api-key=sk-3975daa3fdab4f6bba420690286fcc64
+#spring.ai.dashscope.chat.options.model=qwen-max
+#spring.ai.dashscope.chat.options.model=qwen-plus
+spring.ai.dashscope.chat.options.model=qwen-turbo
+spring.ai.dashscope.agent.app-id=ef857b79569f40a1ab3a3f05c8eaa65f
 
 ###################
 # OpenAI
