--- a/spring-ai-alibaba-agent-example/playground-flight-booking/pom.xml
+++ b/spring-ai-alibaba-agent-example/playground-flight-booking/pom.xml
@@ -42,6 +42,11 @@
 			<artifactId>spring-ai-alibaba-starter-dashscope</artifactId>
 		</dependency>
 
+<!--		<dependency>-->
+<!--			<groupId>org.springframework.ai</groupId>-->
+<!--			<artifactId>spring-ai-starter-model-ollama</artifactId>-->
+<!--		</dependency>-->
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
